# mobile_robot_exp

./: .gitignore  README.md
src/cmd_pkg/: CMakeLists.txt  package.xml
src/cmd_pkg/config/: easy_handeye_eye_on_hand.yaml
src/cmd_pkg/config/map/: robot1.yaml
src/cmd_pkg/include/: move_all_base.h  move_aubo_api.h
src/cmd_pkg/launch/: aubo_bringup.launch
src/cmd_pkg/src/: aubo_add_collision.cpp  exp4_1.py  exp4_2.py  get_pose.cpp  move_all.cpp  move_all_base.cpp  move_aubo.cpp  move_aubo_api.cpp
src/doc/: README.md  commands.md
src/hand_control/: CMakeLists.txt  package.xml
src/hand_control/include/: SerialClass.hpp  protocol.h
src/hand_control/src/: SerialClass.cpp  main.cpp  talker.cpp
