<?xml version="1.0"?>
<package format="2">
  <name>cmd_pkg</name>
  <version>0.0.0</version>
  <description>The cmd_pkg package</description>
  <maintainer email="wang@todo.todo">wang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
